Updated several sections.

--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -9,7 +9,7 @@
 \usepackage{amsmath, amssymb}
 \usepackage{url}
 \usepackage{subfigure}
-%\usepackage[hidelinks,pagebackref]{hyperref} % Handy for links, can comment for plain PDF
+\usepackage[pagebackref]{hyperref} % Handy for links, can comment for plain PDF
 \bibliographystyle{aasjournal}
 
 \DeclareMathOperator\erf{erf}
@@ -85,7 +85,7 @@ Both imaging and interferometry can usually characterize the companion in a sing
 
 \section{Previous Observational Results}
 
-The mass ratio, period, and eccentricity distributions are fairly well-known for solar type stars \citep{Duquennoy1991, Raghavan2010} and cooler stars \citep{Fischer1992, Delfosse2004}. Interestingly, the mass-ratio distribution appears to be invariant to separation for these stars \citep{Meyer2013}, contrary to the theoretical expectations. All of the distributions are much less certain for more massive stars. The reason for this is two-fold: first, more massive stars tend to more rare and farther away, meaning many of the companions are angularly close to the very bright primaries and difficult to detect with imaging techniques. Second, the primary stars tend to be rapid rotators, which limits radial velocity precision to $\sim 1 \mathrm{km\ s}^{-1}$. Additionally, detecting the companion spectrum suffers from the same flux-ratio difficulties as imaging methods.
+The mass ratio, period, and eccentricity distributions are fairly well-known for solar type stars \citep{Duquennoy1991, Raghavan2010} and cooler stars \citep{Fischer1992, Delfosse2004}. Interestingly, the mass-ratio distribution appears to be invariant to separation for these stars \citep{Meyer2013}, contrary to the theoretical expectations. All of the distributions are much less certain for more massive stars. The reason for this is two-fold: first, more massive stars tend to be more rare and farther away, meaning many of the companions are angularly close to the very bright primaries and difficult to detect with imaging techniques. Second, the primary stars tend to be rapid rotators, which limits radial velocity precision to $\sim 1 \mathrm{km\ s}^{-1}$. Additionally, detecting the companion spectrum suffers from the same flux-ratio difficulties as imaging methods, and is the only way to characterize the detected companion.
 
 Nonetheless, \citet{DeRosa2014} performed an adaptive optics imaging survey of nearby A-type stars, and found that the mass-ratio distribution is well-described by a power law with large slope, indicating a very strong preference for low-mass companions. They also found initial evidence that the mass-ratio distribution for companions inside $125$ AU has a much shallower power law slope than that of wide companions, and is consistent with flat. Their close companion subsample contained only 18 binary systems, and the result is complicated by the inherent difficulty of detecting close companions with low mass ratios in an imaging survey. 
 
