--- a/paper4.tex
+++ b/paper4.tex
@@ -2,8 +2,7 @@
 
 \chapter{Mining Planet Search Data for Binary Stars: The $\psi^1$ Draconis system}
 \label{chap:psi1dra}
-We now turn to our first case study in using the direct spectral detection method to find faint companion to the bright star $\psi^1$ Draconis, using archival data originally obtained in order to search for planetary companions.
-This chapter was previously published \citep{Gullikson2015}. The co-authors noticed a trend in the data, and suggested I look into it with the methodology I developed. They obtained the majority of the data used in the work.
+We now turn to our first case study in using the direct spectral detection method to find a faint companion to the bright star $\psi^1$ Draconis. in this chapter, we use archival data originally obtained in order to search for planetary companions. This chapter was previously published \citep{Gullikson2015}. The co-authors noticed a trend in the data, and suggested I look into it with the direct spectral detection methodology. They obtained the majority of the data used in the work.
 
 \section{Introduction}
 \label{paper4_sec:intro}
@@ -11,9 +10,9 @@ Several groups \citep[e.g.][]{Wittenmyer2006, Fischer2009, Pepe2011} have used t
 
 Previously unknown stellar binary companions are nonetheless still uncovered in planet--search data through large--amplitude linear trends or even full long-period orbits, but may be ignored since the goal is to find planet--mass companions. Since binary stars are usually excluded in the star sample, companions that are found tend to have extreme flux- and mass-ratios. Binary stars with extreme mass-ratios on orbits with $\sim 10$ year timescales are precisely the ones that are most difficult to detect and characterize with imaging techniques, and so they should not be ignored.
 
-Several groups have recently worked towards using high-resolution spectroscopy to search for very faint companions to nearby stars, both in the context of detecting emission \citep{Snellen2010, Gullikson2013} or reflection \citep{Martins2013} from ``Hot Jupiter'' planets, and in the context of detecting stellar binary systems with high contrast ratios \citep[e.g.][]{Gullikson2013_2, Kolbl2015}. Those groups all use a cross-correlation analysis to search directly for the spectral lines of the faint companion and mainly differ in their treatment of the primary star and telluric lines.
+Several groups have recently worked towards using high-resolution spectroscopy to search for very faint companions to nearby stars, both in the context of detecting emission \citep{Snellen2010, Gullikson2013} or reflection \citep{Martins2013} from ``Hot Jupiter'' planets, and in the context of detecting stellar binary systems with high contrast ratios \citep[e.g.][]{Gullikson2013_2, Kolbl2015}. Those groups all use a cross-correlation analysis to search directly for the spectral lines of the faint companion and mainly differ in their treatment of the primary star and telluric lines. We describe one method of removing the primary star spectrum in Chapter \ref{chap:dsd}; in this chapter, we describe a second method that uses orbital information to estimate an empirical primary star spectrum.
 
-In this paper we use data from the McDonald Observatory Planet Search team to examine the $\psi^1$ Draconis system, which consists of an F5IV--V star ($\psi^1$ Dra A) orbited by a G0V star ($\psi^1$ Dra B) with angular separation $30''$ \citep{WDS} (680 AU). \cite{Tokovinin2002} searched for signs of a spectroscopic companion to $\psi^1$ Dra A from 1991--1995, but found no radial velocity variation. More recently \cite{Toyota2009} noted a linear trend in their radial velocity measurements, and predicted a companion with $M > 50 M_J$. Our data have a much longer time baseline than either of the previous studies, and show a significant fraction of the orbit which has recently reached quadrature. Furthermore, \citet{Endl2015} use adaptive-optics imaging to detect a $\sim 4500\ K$ companion 155 mas from $\psi^1$ Dra A, which they hypothesize is the source of the orbital motion seen in the primary-star radial-velocity measurements. 
+In this chapter we use data from the McDonald Observatory Planet Search team to examine the $\psi^1$ Draconis system, which consists of an F5IV--V star ($\psi^1$ Dra A) orbited by a G0V star ($\psi^1$ Dra B) with angular separation $30''$ \citep{WDS} (680 AU). \cite{Tokovinin2002} searched for signs of a spectroscopic companion to $\psi^1$ Dra A from 1991--1995, but found no radial velocity variation. More recently \cite{Toyota2009} noted a linear trend in their radial velocity measurements, and predicted a companion with $M > 50 M_J$. Our data have a much longer time baseline than either of the previous studies, and show a significant fraction of the orbit which has recently reached quadrature. Furthermore, \citet{Endl2015} use adaptive-optics imaging to detect a $\sim 4500\ K$ companion 155 mas from $\psi^1$ Dra A, which they hypothesize is the source of the orbital motion seen in the primary-star radial-velocity measurements. 
 
 Here, we use all of our spectra of $\psi^1$ Dra A to search directly for the spectral lines of the companion and measure the system mass ratio. We describe the observations and data reduction in Section \ref{paper4_sec:obs}, and the method we use to search for the companion in Section \ref{paper4_sec:method}. Finally, we estimate the mass-ratio of the system and give the parameters for the companion in Section \ref{paper4_sec:orbit}.
 
@@ -140,7 +139,7 @@ We used the \emph{Austral} code \citep{Endl2000} to measure the differential rad
 \section{Companion Search}
 \label{paper4_sec:method}
 
-We use a cross-correlation analysis inspired by recent work attempting to detect light from planetary companions around late-type stars \citep{Gullikson2013, Martins2013} to search for the companion ($\psi^1$ Dra C). We start by dividing all spectra by the blaze function of the spectrograph, and further divide them by an empirical $I_2$ cell absorption spectrum in the spectral orders with $500 < \lambda < 640$ nm. The blaze function is derived by fitting a high-order polynomial to the extracted spectrum of an incandescent light source (a flat lamp), and the empirical $I_2$ spectrum is the spectrum of a flat lamp with the $I_2$ cell inserted in the light path. Both the flat lamp and $I_2$ spectra are observed each day of each observing run. We use the Telfit code \citep{Gullikson2014} to fit and remove the unsaturated telluric absorption lines in the spectrum, and cross-correlate each residual spectrum against a Phoenix model spectrum \citep{Husser2013} with parameters
+We use a cross-correlation analysis inspired by recent work attempting to detect light from planetary companions around late-type stars \citep{Gullikson2013, Martins2013} to search for the companion ($\psi^1$ Dra C). We start by dividing all spectra by the blaze function of the spectrograph, and further divide them by an empirical $I_2$ cell absorption spectrum in the spectral orders with $500 < \lambda < 640$ nm. The blaze function is derived by fitting a high-order polynomial to the extracted spectrum of an incandescent light source (a flat lamp), and the empirical $I_2$ spectrum is the spectrum of a flat lamp with the $I_2$ cell inserted in the light path. Both the flat lamp and $I_2$ spectra are observed each day of each observing run. We use the Telfit code \citep[][and Chapter \ref{chap:telfit}]{Gullikson2014} to fit and remove the unsaturated telluric absorption lines in the spectrum, and cross-correlate each residual spectrum against a Phoenix model spectrum \citep{Husser2013} with parameters
 
 \begin{itemize}
 \item $T_\mathrm{eff} = 4400$ K
@@ -200,9 +199,16 @@ s_2 &= \sum_{t_m} \frac{(v_{2,m} - v_2(t_m)(1+\frac{K_1}{K_2}) - \Delta v_2)^2}{
 
 where $v_{1,2}(t) = v(T_0, P, e, K_{1,2}, \omega, t)$ is the velocity at time t given by the orbital elements $T_0, P, e, K$, and $\omega$.
 
-We use the affine invariant sampler provided in the emcee code \citep{emcee} to perform a Markov Chain Monte Carlo (MCMC) fit to all of the parameters described above. We use flat priors in all variables except for the rv--jitter and companion rv uncertainty scale factors ($\sigma_J$ and $f$, respectively), for which we use log-uniform priors to allow for a large range of values.  We give the median value and uncertainty for each parameter in Table \ref{paper4_tab:orbit}., and display samples from the marginal posterior distribution in Figure \ref{paper4_fig:posterior} The uncertainties are estimated from the posterior probability distribution samples such that the lower and upper bounds give the 16th and 84th percentile (i.e. they are $1\sigma$ credibility intervals). We plot the best-fit orbit with the data in Figure \ref{paper4_fig:orbit}, with the uncertainties on the companion velocities scaled and the velocities shifted by $\Delta v_1$ and $\Delta v_2$. 
+We use the affine invariant sampler provided in the emcee code \citep{emcee} to perform a Markov Chain Monte Carlo (MCMC) fit to all of the parameters described above. We use flat priors in all variables except for the rv--jitter and companion rv uncertainty scale factors ($\sigma_J$ and $f$, respectively), for which we use log-uniform priors to allow for a large range of values.  We give the median value and uncertainty for each parameter in Table \ref{paper4_tab:orbit}., and display samples from the marginal posterior distributions of the orbital parameters in Figure \ref{paper4_fig:posterior} The uncertainties are estimated from the posterior probability distribution samples such that the lower and upper bounds give the 16th and 84th percentile (i.e. they are $1\sigma$ credibility intervals). We plot the best-fit orbit with the data in Figure \ref{paper4_fig:orbit}, with the uncertainties on the companion velocities scaled and the velocities shifted by $\Delta v_1$ and $\Delta v_2$. 
 
 Next, we calculate a series of derived quantities to characterize the companion and report them in Table \ref{paper4_tab:orbit}. The mass ratio of the system is the ratio $K_1/K_2 = 0.47$. We estimate the primary star mass by interpolating Dartmouth isochrones \citep{Dotter2008} with the `isochrones' code \citep[described in][]{Montet2015}, and using spectroscopic parameters derived in \citet{Endl2015}. The secondary mass is $M_2 = qM_1 \sim 0.70\ M_{\odot}$; assuming the same age and metallicity as the primary, the Dartmouth isochrones give an expected temperature of ${\sim}4400 $ K. That temperature is in excellent agreement with the high--contrast--imaging data, which support a companion of ${\sim}4400$ K with large uncertainty. With both the primary and secondary star mass, we calculate the orbital inclination and semimajor axis and report them in Table \ref{paper4_tab:orbit}.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\columnwidth]{Figures/paper4_corner.pdf}
+  \caption{Marginalized posterior probability distribution estimates for the orbital parameters we fit. There is a strong degeneracy between the period and epoch of periastron ($T_0$) because we have not yet observed a full orbit.}
+  \label{paper4_fig:posterior}
+\end{figure}
 
 
 
