--- a/paper5.tex
+++ b/paper5.tex
@@ -8,7 +8,7 @@ This chapter was previously published \citep{Gullikson2016}. Adam Kraus and Sara
 
 It is difficult to detect low-mass companions very near an intrinsically bright primary star and even more difficult to characterize the companion. There are three commonly used techniques for binary star searches: direct imaging with adaptive optics systems,  interferometry, and radial velocity monitoring. Imaging can easily detect low-mass companions at wide apparent separations, but loses sensitivity as the on-sky distance from the primary star decreases \citep[see][for typical sensitivity curves]{DeRosa2014}. Interferometry can usually achieve smaller working angles than imaging, but cannot achieve as high contrast \citep[see e.g.][]{Aldoretta2015}.
 
- Radial velocity monitoring can easily find companions on very short-period orbits, but its sensitivity to low-mass companions drops as the physical separation increases. This is especially true for A- and B-type stars, where radial velocity precision is typically limited to $\sim 1 \mathrm{km\ s}^{-1}$ by their rotationally broadened lines. Additionally, radial velocity monitoring techniques cannot \emph{characterize} the companion unless the inclination is known or if the companion spectral lines are also visible. All three techniques have separation-dependent sensitivity, which introduces observational bias in any search for a parameter that changes with physical separation.
+ Radial velocity monitoring can find companions on very short-period orbits, but its sensitivity to low-mass companions drops as the physical separation increases. This is especially true for A- and B-type stars, where radial velocity precision is typically limited to $\sim 1 \mathrm{km\ s}^{-1}$ by their rotationally broadened lines. Additionally, radial velocity monitoring techniques cannot \emph{characterize} the companion unless the inclination is known or if the companion spectral lines are also visible. All three techniques have separation-dependent sensitivity, which introduces observational bias in any search for a parameter that changes with physical separation.
  
  One technique that is separation independent is to search directly for the composite spectrum of two stars. \citet{Burgasser2007} used single-epoch low-resolution spectroscopy to identify and characterize a brown dwarf binary system by fitting both spectra simultaneously. This method only works if the stars have a similar brightness but very different spectra, such that the spectral features from both components are visible and distinguishable. If, as in the case of binary systems with very large flux ratios, the companion spectrum is buried within the noise of the primary star, a different method is needed.
  
@@ -22,7 +22,7 @@ In this chapter, we describe the DSD method in detail, and use it to detect the 
 
 All implementations of the DSD method use high-spectral-resolution and high signal-to-noise spectra, and search for companions with extreme flux ratios by cross-correlating the observed spectra with models for the expected companion. The main differences between the various implementations are the primary star and telluric line removal processes. The `Hot Jupiter' searches \citep[e.g.][]{Snellen2010} use known orbital phase information and a high degree of phase coverage to simultaneously estimate an empirical stellar and telluric spectrum with minimal contamination from the planet. We discuss similar techniques in Chapters \ref{chap:psi1dra} and \ref{chap:hotjup} of this thesis. \citet{Kolbl2015} use optical data, and remove the primary star spectrum with a best-fit model spectrum; they do not attempt any telluric correction. Note that the approach of \cite{Kolbl2015} is conceptually similar to the todcor code \citep{Mazeh1994}, which is widely used to search for double-lined spectroscopic binary systems.
 
-Unlike most previous work, we focus on not only detecting but accurately characterizing the companion. We additionally optimize our technique for detecting cool companions to rapidly rotating early-type stars, for which it is very difficult to detect the reflex motion of the primary star. We fit and remove the telluric absorption using the TelFit code \citep{Gullikson2014}, and estimate an empirical primary star spectrum with a Gaussian smoothing filter applied to the telluric-corrected data. We chose to use a smoothing filter over subtracting model spectra for two reasons: first, the model spectra are a poor representation of the data, especially at the high signal-to-noise ratios that we use, and so leave very large-scale features in the residual spectrum. Second, the smoothing filter will also remove any large-scale instrumental systematics in the spectrum. We use a smoothing filter with a  window size ($w$) set by
+Unlike most previous work, we focus on not only detecting but accurately characterizing the companion. We additionally optimize our technique for detecting cool companions to rapidly rotating early-type stars, for which it is very difficult to detect the reflex motion of the primary star. We fit and remove the telluric absorption using the TelFit code \citep[][and Chapter \ref{chap:telfit}]{Gullikson2014}, and estimate an empirical primary star spectrum with a Gaussian smoothing filter applied to the telluric-corrected data. We chose to use a smoothing filter over subtracting model spectra for two reasons: first, the model spectra are a poor representation of the data, especially at the high signal-to-noise ratios that we use, and so leave very large-scale features in the residual spectrum. Second, the smoothing filter removes any large-scale instrumental systematics in the spectrum, aiding in companion detection. We use a smoothing filter with a  window size ($w$) set by
 
 \begin{equation}
 w = \frac{v\sin{i} \cdot f}{c} \cdot \frac{\lambda_0}{\Delta \lambda}
@@ -317,7 +317,7 @@ We also estimated the sensitivity to detection of companions with a range of tem
 
 The lowest detectable mass ratio is even more striking for young stars. At 1 Myr, both the A0 star and its companion are still contracting onto the main sequence \citep{Bressan2012}. The flux ratio limit corresponds to a $\sim$ M1 companion, similar to the main sequence case. However the mass ratio in this young system is $M_\mathrm{sec}/M_\mathrm{prim} \sim 0.1$, half that of main-sequence components with similar spectral types. The direct spectral detection method is therefore well suited for finding close, low-mass companions to massive young stars.
 
-There is also an upper detection limit near $6500\ K$ set by rotation. Our method of removing the primary star spectrum can also remove the companion spectrum if it has a similar rotational velocity, which hot companions are likely to have. Subtracting a model atmosphere for the primary star would remove the upper limit, but would reduce the detection rate for cool companions that are most difficult to detect with any other means.
+There is also an upper detection limit near $6500\ K$ set by rotation. Our method of removing the primary star spectrum can also remove the companion spectrum if it has a similar rotational velocity, which hot companions are likely to have. Subtracting a model atmosphere for the primary star would remove the upper limit, but would reduce the detection rate for cool companions that are most difficult to detect with any other means. We alleviate the problem somewhat in Chapter \ref{chap:survey} by extending the CCF search grid (see Section \ref{paper5_sec:method}) to higher temperatures and rotational velocities.
 
 Finally, we applied the direct spectral detection method to a set of known binary systems with close, late-type companions. We detected the companion spectrum in 9 of 34 known binary systems, 3 of which we characterized for the first time. Most of the companions we failed to detect are likely very cool, falling below the sensitivity limit of our data.
 
@@ -334,7 +334,7 @@ The Hobby-Eberly Telescope (HET) is a joint project of the University of Texas a
 
 Based on observations at Cerro Tololo Inter-American Observatory, National Optical Astronomy Observatory (NOAO Prop. IDs: 13A-0139, 13B-0112, 2014A-0260, 14A-0260, 15A-0245; PI: Kevin Gullikson), which is operated by the Association of Universities for Research in Astronomy (AURA) under a cooperative agreement with the National Science Foundation. 
 
-We would like to thank Bill Cochran and Mike Endl for observing some of the spectra used in this project. . Finally, we would like to thank the anonymous referee for numerous comments that improved the paper.
+We would like to thank Bill Cochran and Mike Endl for observing some of the spectra used in this project. Finally, we would like to thank the anonymous referee for numerous comments that improved the paper.
 
 
 
