--- a/references.bib
+++ b/references.bib
@@ -4363,6 +4363,23 @@ archivePrefix = "arXiv",
 }
 
 
+@ARTICLE{VanLeeuwen2007,
+   author = {{van Leeuwen}, F.},
+    title = "{Validation of the new Hipparcos reduction}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {0708.1752},
+ keywords = {space vehicles: instruments, methods: data analysis, catalogs, astrometry, instrumentation: miscellaneous},
+     year = 2007,
+    month = nov,
+   volume = 474,
+    pages = {653-664},
+      doi = {10.1051/0004-6361:20078357},
+   adsurl = {http://cdsads.u-strasbg.fr/abs/2007A%26A...474..653V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 
 
 
